<resources>
    <string name="app_name">TourGuide</string>
    <string name="category_lists">Lists</string>
    <string name="welcome">Welcome</string>
    <string name="city_name">Mumbai</string>
    <string name="get_started">Submit</string>
    <string name="restaurant">Restaurant</string>
    <string name="beaches">Beaches</string>
    <string name="museums">Museums</string>
    <string name="events">Events</string>
    <string name="market">Markets</string>
    <string name="his_site">Historical Sites</string>
    <string name="city1_name">Mumbai</string>
    <string name="city2_name">Delhi</string>
    <string name="city3_name">Bengaluru</string>
    <string name="city4_name">Kolkata</string>
    <string name="city5_name">Jaipur</string>
    <string name="city6_name">Hyderabad</string>
    <string name="city7_name">Chennai</string>
    <string name="city8_name">Ahmedabad</string>


    <!--beaches names -->
    <string name="Aska_beach_name">Aska Beach</string>
    <string name="Gorai_beach_name">Gorai Beach</string>
    <string name="Marve_beach_name">Marve Beach</string>
    <string name="Versova_beach_name">Versova Beach</string>
    <string name="Juhu_beach_name">Juhu Beach</string>
    <string name="Dadar_beach_name">Dadar Beach</string>
    <string name="Girgaum_beach_name">Girgaum Chowpatty</string>


    <!--beaches address -->
    <string name="Aska_beach_address">Address: Aksa village, Malad, Mumbai, India</string>
    <string name="Gorai_beach_address">Address: Borivali West, Gorai, Mumbai, Maharashtra 400091</string>
    <string name="Marve_beach_address">Address: Western Suburb, Malad, Mumbai</string>
    <string name="Versova_beach_address">Address: Bharat Nagar, Versova, Andheri West, Mumbai</string>
    <string name="Juhu_beach_address">Address: Juhu Beach, Juhu Tara Rd, Juhu, Mumbai</string>
    <string name="Dadar_beach_address">Address: Koliwada Road, Bhati Koliwada, Bhati Gaon, Madh, Mumbai</string>
    <string name="Girgaum_beach_address">Address: Northern end of Marine Drive, South Mumbai</string>
    
    
    <!--events name-->
    <string name="cylin">HikerWolf - Mumbai Midnight Cycling</string>
    <string name="ahinsa">AHINSA THE EARTH RUN</string>
    <string name="tour">Mumbai Heritage Walking Tour</string>


    <!--events address -->
    <string name="cyclin_address">Address: Colaba Causeway, Mumbai, India</string>
    <string name="ahinsa_address">Address: JVPD Grounds Devle Road, Juhu, Mumbai, India</string>
    <string name="tour_address">Address: Malad, Mumabi, India</string>


    <!--restaurants name-->
    <string name="res1">Namak - Indian Specialty Restaurant</string>
    <string name="res2">JW cafe</string>
    <string name="res3">The Table</string>
    <string name="res4">Fifty Five East</string>
    <string name="res5">Nawab Saheb</string>


    <!--restaurants Add-->
    <string name="res1_add">Address: Hotel Sahara Star, opposite Terminal 1, Navpada, Vile Parle East, Vile Parle, Mumbai</string>
    <string name="res2_add">Address: Chhatrapati Shivaji International Airport Area, Vile Parle, Mumbai</string>
    <string name="res3_add">Address: Ground Floor, Kalapesi Trust Building, Opposite Dhanraj Mahal</string>
    <string name="res4_add">Address: Grand Hyatt, Off, Western Express Hwy, Santacruz East, Mumbai</string>
    <string name="res5_add">Address: Renaissance Mumbai Convention Centre Hotel, Powai, Mumbai</string>


    <!--Museums Add-->
    <string name="mus1_add">Address: 91 A, Rani Baug, Veer Mata Jijbai Bhonsle Udyan, Dr Baba Saheb Ambedkar Rd</string>
    <string name="mus2_add">Address: 19, Laburnum Rd, near Police Station, Babulnath, Gamdevi, Mumbai</string>
    <string name="mus3_add">Address: Worli, Mumbai, Maharashtra 400018</string>
    <string name="mus4_add">Address: 161B, Mahatma Gandhi Road, Kala Ghoda, Fort, Mumbai</string>


    <!--Museums Name-->
    <string name="mus1">Dr. Bhau Daji Lad Museum</string>
    <string name="mus2">Mani Bhavan Gandhi Sangrahalaya</string>
    <string name="mus3">Nehru Science Centre</string>
    <string name="mus4">Jehangir Art Gallery</string>

    <!--**************************************************************************************************************************************-->

    <!--Delhi Historical Sites Names-->
    <string name="site1">Qutub Minar</string>
    <string name="site2">Red Fort</string>
    <string name="site3">India Gate</string>
    <string name="site4">Lotus Temple</string>
    <string name="site5">Jantar Mantar</string>
    <string name="site6">Sri Bangla Sahib Gurudwara</string>
    <string name="site7">Akshardham Temple Delhi</string>
    <string name="site8">Jama Masjid</string>


    <!--Delhi Historical Sites Address-->
    <string name="site1_add">Seth Sarai, Mehrauli, New Delhi, Delhi 110030</string>
    <string name="site2_add">Netaji Subhash Marg, Lal Qila, Chandni Chowk, New Delhi</string>
    <string name="site3_add"> Rajpath, India Gate, New Delhi</string>
    <string name="site4_add">Lotus Temple Rd, Bahapur, Shambhu Dayal Bagh, Kalkaji, New Delhi</string>
    <string name="site5_add">Connaught Place, Sansad Marg, New Delhi</string>
    <string name="site6_add">Hanuman Road Area, Connaught Place, New Delhi</string>
    <string name="site7_add">Noida Mor, Pandav Nagar, New Delhi</string>
    <string name="site8_add">Jama Masjid Rd, Chandni Chowk, New Delhi,</string>

    <!--Delhi Res names-->
    <string name="del_res1">DUM PUKHT</string>
    <string name="del_res2">THE SPICE ROUTE</string>
    <string name="del_res3">MOTI MAHAL DELUX</string>
    <string name="del_res4">1911 RESTAURANT</string>
    <string name="del_res5">TRAVERTINO</string>
    <string name="del_res6">THE YUM YUM TREE</string>
    <string name="del_res7">MAGIQUE</string>
    <string name="del_res8">SAKURA</string>

    <!--Delhi Res Address-->
    <string name="del_res1_add">ITC Maurya, Diplomatic Enclave, Sardar Patel Marg, Delhi</string>
    <string name="del_res2_add">The Imperial Hotel, Janpath, Delhi</string>
    <string name="del_res3_add">Greater Kailash 1, Delhi</string>
    <string name="del_res4_add">The Imperial Hotel, Janpath, Delhi</string>
    <string name="del_res5_add"> Dr Zakir Hussain Marg, Delhi</string>
    <string name="del_res6_add">First Floor, Community Centre, New Friends Colony, Delhi</string>
    <string name="del_res7_add">Gate No. 3, Garden of 5 Senses, Westend Marg, Said ul Ajaib, Delhi</string>
    <string name="del_res8_add">The Metropolitan Hotel, Bangla Sahib Road, Delhi</string>

    <!--Delhi Museum Name-->
    <string name="del_mus1">National Museum</string>
    <string name="del_mus2">National Handicrafts and Handlooms Museum</string>
    <string name="del_mus3">National Rail Museum</string>
    <string name="del_mus4">Shankar’s International Dolls Museum</string>
    <string name="del_mus5">National Gallery of Modern Art</string>
    <string name="del_mus6"> Nehru Memorial Museum And Library</string>
    <string name="del_mus7">National Science Centre</string>
    <string name="del_mus8">Indian Air Force Museum</string>

    <!--Delhi Museum Address-->
    <string name="del_mus1_add">Janpath Rd, Rajpath Area, Central Secretariat, New Delhi</string>
    <string name="del_mus2_add">Bhairon Marg, Pragati Maidan, New Delhi</string>
    <string name="del_mus3_add">Chanakyapuri, New Delhi, Delhi 11002</string>
    <string name="del_mus4_add">Nehru House, 4 Bahadur Shah Zafar Marg, Delhi</string>
    <string name="del_mus5_add">Jaipur House, Shershah Road, Delhi</string>
    <string name="del_mus6_add">Teen Murti Bhavan, Teen Murti Marg, Teen Murti Marg Area, New Delhi</string>
    <string name="del_mus7_add">Bhairon Marg, Pragati Maidan, New Delhi</string>
    <string name="del_mus8_add">Palam, New Delhi, Delhi 110010</string>

    <!--Delhi Markets-->
    <string name="del_mar1">Khan Market</string>
    <string name="del_mar2">Daryaganj Sunday Book Market</string>
    <string name="del_mar3">Janpath Market</string>
    <string name="del_mar4">Karol Bagh Market</string>
    <string name="del_mar5">Chandni Chowk Market</string>
    <string name="del_mar6">Spice Market</string>
    <string name="del_mar7">Sadar Bazaar</string>
    <string name="del_mar8">Gole Market</string>

    <!--Delhi Market Address-->
    <string name="del_mar1_add">61A, Khan Market, Rabindra Nagar, New Delhi, Delhi 110003</string>
    <string name="del_mar2_add"> Asaf Ali Rd, Chatta lal Miya, Chandni Mahal, Daryaganj, New Delhi</string>
    <string name="del_mar3_add">Janpath Rd, Janpath, Connaught Place, New Delhi</string>
    <string name="del_mar4_add"> Block 1, WEA, Karol Bagh, New Delhi, Delhi</string>
    <string name="del_mar5_add">2573, Nai Sarak, Raghu Ganj, Roshanpura, Old Delhi, New Delhi</string>
    <string name="del_mar6_add">Khari Baoli Rd, Fatehpuri, Chandni Chowk, New Delhi</string>
    <string name="del_mar7_add">SADAR BAZAR, NORTH DELHI, DELHI</string>
    <string name="del_mar8_add">Rajapur, Pocket 12, Sector 9, Rohini, Delhi, 110085</string>
<!--****************************************************************************************************************************************-->

    <!--Banglore Res names-->
    <string name="ben_res1">Zoey: Good Vibes Only</string>
    <string name="ben_res2">The Pallet - Brewhouse and Kitchen</string>
    <string name="ben_res3">Karavalli</string>
    <string name="ben_res4">Raj Pavilion - Restaurants In Bengaluru</string>
    <string name="ben_res5">The Creek - The Den Bengaluru</string>
    <string name="ben_res6">Shiro</string>
    <string name="ben_res7">Spice Terrace</string>
    <string name="ben_res8">Jamavar</string>

    <!--Banglore Res Address-->
    <string name="ben_res1_add">14/1, Kodathi Gate, Sarjapura Road, Oppsite St Patricks Academy, Bengaluru</string>
    <string name="ben_res2_add">HVP Crest, ITPL Main Rd, Thigalarapalya, Whitefield, Bengaluru</string>
    <string name="ben_res3_add">Vivanta Bengaluru, 66, Residency Rd, Bengaluru</string>
    <string name="ben_res4_add">25, Windsor Square, Golf Course Road, Bengaluru</string>
    <string name="ben_res5_add">ITPL Main Rd, KIADB Export Promotion Industrial Area, Whitefield, Bengaluru</string>
    <string name="ben_res6_add">222, 3rd Floor, "Comet UB City, Vittal Mallya Rd, Bengaluru</string>
    <string name="ben_res7_add">JW Marriott Bengaluru, 24/1, Vittal Mallya Rd, Ashok Nagar, Bengaluru</string>
    <string name="ben_res8_add">Lobby level, The Leela Palace Bengaluru, 23, HAL Old Airport Rd, Bengaluru</string>


    <!--Banglore sites names -->
    <string name="ben_site1">Bangalore Palace</string>
    <string name="ben_site2">Cubbon Park</string>
    <string name="ben_site3">Tipu Sultan Summer Palace</string>
    <string name="ben_site4">Lalbagh Botanical Garden</string>
    <string name="ben_site5">Bangalore Fort</string>
    <string name="ben_site6">St. Mary\'s Basilica</string>



    <!--Banglore Res Address-->
    <string name="ben_site1_add">Vasanth Nagar, Bengaluru</string>
    <string name="ben_site2_add">Kasturba Road, Behind High Court of Karnataka Ambedkar Veedhi, Sampangi Rama Nagara, Bengaluru</string>
    <string name="ben_site3_add">Tippu Sultan Palace Rd, Chamrajpet, Bengaluru</string>
    <string name="ben_site4_add"> Mavalli, Bengaluru</string>
    <string name="ben_site5_add"> Krishna Rajendra Rd, New Tharagupet, Bengaluru</string>
    <string name="ben_site6_add">Msgr. F. Noronha Road, Shivaji Nagar, Bengaluru</string>



</resources>
