<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

        <TextView
            style="@style/welcomeStyle"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:text="@string/welcome" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/city1"
                android:text="@string/city1_name"
                style="@style/rad_style"/>
            <RadioButton
                android:id="@+id/city2"
                android:text="@string/city2_name"
                style="@style/rad_style"/>
            <RadioButton
                android:id="@+id/city3"
                android:text="@string/city3_name"
                style="@style/rad_style"/>
            <RadioButton
                android:id="@+id/city4"
                android:text="@string/city4_name"
                style="@style/rad_style"/>
            <RadioButton
                android:id="@+id/city5"
                android:text="@string/city5_name"
                style="@style/rad_style"/>
            <RadioButton
                android:id="@+id/city6"
                android:text="@string/city6_name"
                style="@style/rad_style"/>
        </RadioGroup>
        <Button
            android:id="@+id/getStarted"
            style="@style/buttonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:onClick="get_started"
            android:text="@string/get_started" />

    </LinearLayout>

